--- a/public/css/scss/cv.scss
+++ b/public/css/scss/cv.scss
@@ -138,7 +138,7 @@ html {
   border: 1px solid #08021f;
   background-color: rgba(255, 255, 255, 0.3);
   border-radius: 10px;
-  display: none;
+  //display: none;
 }
 
 .complementaire {
@@ -408,7 +408,7 @@ p.flags {
 //expériences
 .infojob {
   font-family: monospace;
-  font-size: 1.3em;
+  font-size: 1.1em;
 }
 
 .titreJob {
