--- a/public/cvID.pug
+++ b/public/cvID.pug
@@ -4,16 +4,18 @@ append content
     .table-cell
       #m0ncentrage
         #INDEX
-          //.moi
+          .moi
             //display-none
-            //p.moiPara Mika&euml;l GARCIA 37 y/o 
-              //img.foto(src='/static/img/photoCV.jpg' alt='Mafoto' height='78' onclick='openlinkedin();')
+            p.moiPara Mika&euml;l GARCIA 37 y/o
+              img.foto(src='/static/img/photoCV.jpg' alt='Mafoto' height='62' onclick='openlinkedin();')
             //a.pdf.french(href='/static/img/cvMikaelFr.pdf')
               //img.pdf.french(src='/static/img/downPdf.svg' alt='download pdf' height='64')
             //a.pdf.english(href='/static/img/cvMikaelEn.pdf')
               //img.pdf.english(src='/static/img/downPdf.svg' alt='download pdf' height='64')
-            //p.moiPara +33 695 490 777
-            //p.moiPara garcia.mikael@gmail.com
+            p.moiPara 65 rue de la république
+            p.moiPara 82000 MONTAUBAN
+            p.moiPara +33 695 490 777
+            p.moiPara garcia.mikael@gmail.com
           #metier
             h1 IBM RPG &amp; Javascript Developer
           p.flags
