--- a/public/giftedADHD.pug
+++ b/public/giftedADHD.pug
@@ -14,20 +14,20 @@ append content
 						span.english written by: Lynn-nore Chittom
 						span.french écrit par: Lynn-nore Chittom
 						br
-						span.english &bull; edited by: Daniel P. McGoldrick &bull;
-						span.french &bull; édité par: Daniel P. McGoldrick &bull;
+						span.english edited by: Daniel P. McGoldrick
+						span.french édité par: Daniel P. McGoldrick
 						br
-						span.english &bull; PhD Genome Sciences &bull;
-						span.french &bull; Professeur en Sciences Génétiques &bull;
+						span.english PhD Genome Sciences
+						span.french Professeur en Sciences Génétiques
 						br
-						span.english &bull; University of Washington Seattle &bull;
-						span.french &bull; University of Washington Seattle &bull;
+						span.english University of Washington Seattle
+						span.french University de Washington Seattle
 						br
-						span.english &bull; UW - Department of Genome Sciences &bull;
-						span.french &bull; UW - Departement de Sciences Génétiques &bull;
+						span.english Department of Genome Sciences
+						span.french Departement de Sciences Génétiques
 						br
-						span.english &bull; updated: 5/25/2011 &bull;
-						span.french &bull; mis à jour: 25/05/2011 &bull;
+						span.english updated: 5/25/2011
+						span.french mis à jour: 25/05/2011
 						br
 						span.french traduit par: Mikaël Garcia le 19 mars 2020
 					p
