--- a/public/css/scss/cv.scss
+++ b/public/css/scss/cv.scss
@@ -78,7 +78,7 @@ html {
   text-transform: uppercase;
   margin-bottom: 0.3em;
   margin-top: 0.3em;
-  font-size: 2em;
+  //font-size: 2em;
 }
 
 .titreH3 {
@@ -86,7 +86,7 @@ html {
   text-transform: uppercase;
   margin-top: 0em;
   margin-bottom: 0em;
-  font-size: 1.5em;
+  //font-size: 1.5em;
 }
 
 /*****
