--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -330,12 +330,13 @@ template {
   display: none;
 }
 
-  #jugglejungle {
+#jugglejungle,
+#s0leil {
   display: none;
   border: 0.7px solid black;
-  width: 99%;
+  width: 98%;
   border-radius: 10px;
-  margin: 0.5%;
+  margin: 1%;
 }
 
 .css3buttonRed, .css3button {
@@ -351,6 +352,10 @@ body {
 
 html {
   height: 100%;
+}
+
+iframe {
+  margin-top: 2em;
 }
 
 #INDEX {
