--- a/public/adm1n.pug
+++ b/public/adm1n.pug
@@ -7,13 +7,14 @@ append content
           h1.log LOG IN
             #adm1n
             //2965750440209401
+            h1 PC SECURITE PC
             #container.col
-              h1 PC SCURITE PC
-                iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2965837796867332%2F&width=1280' width='640' height='480' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
-                iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2965714136879698%2F&width=1280' width='480' height='960' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
-                iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2965750440209401%2F&width=1280' width='640' height='480' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
+              iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2965837796867332%2F&width=1280' width='640' height='480' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
+              iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2965714136879698%2F&width=1280' width='480' height='960' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
+              iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2965750440209401%2F&width=1280' width='640' height='480' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
               h1 Easter people's proof of stil active hacking
-                iframe(src='https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fposts%2F2966141376836974&width=500' width='500' height='388' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allow='encrypted-media')
+              br
+              iframe(src='https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fposts%2F2966141376836974&width=500' width='500' height='388' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allow='encrypted-media')
               h1 ICE
               p visualstudio2017buildtools has been installed.
               p visualstudio2017buildtools may be able to be automatically uninstalled.
