--- a/public/layoutNav.pug
+++ b/public/layoutNav.pug
@@ -22,7 +22,7 @@ html(lang="en")
         li
           a#resume.nav(rel='preconnect' href='/nomPage?r=cv' class='css3button') CV
         li
-          a#admin.nav(rel='preconnect' href='/nomPage?r=adm1n' class='css3button') Admin
+          a#admin.nav(rel='preconnect' href='/nomPage?r=adm1n' class='css3button') XxX
         li
           a#adhd.nav(rel='preconnect' href='/nomPage?r=giftedADHD' class='css3button') ADHD
     block content
