mise en forme .hack

--- a/public/css/scss/styles.scss
+++ b/public/css/scss/styles.scss
@@ -29,6 +29,10 @@ iframe {
     margin-top: 0.5em;
 }
 
+.hack {
+    width: 640px;
+}
+
 #INDEX {
     //display: none;
     border: 1px solid white;
