--- a/public/adm1n.pug
+++ b/public/adm1n.pug
@@ -7,7 +7,7 @@ append content
           h1.liens LOG IN
             #adm1n
             //2965750440209401
-            h1.liens PC SECURITE {Fil de caméra PC = cable de caméra Pauvre Conne (ensemble de filS au sein d'une gaine commune) = Mme Ghiberto de la Police nationnale Française}
+            h1.liens PC SECURITE {Fil de caméra PC = cable de caméra Pauvre Conne (ensemble de filS au sein d'une gaine commune) = Mme Ghiberto de la Police nationale Française}
             #container.col
               iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2967225933395185%2F&width=1280' width='480' height='320' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
               br
