--- a/public/adm1n.pug
+++ b/public/adm1n.pug
@@ -16,6 +16,12 @@ append content
               h1.liens Proof of hack, apparently from some eastern people
               br
               iframe(src='https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fposts%2F2966141376836974&width=500' width='480' height='370' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allow='encrypted-media')
+              //@Emmanuel et Brigitte MACRON
+              h1.liens Visite du Présedent de la Russie aux Macrons lors de leurs vacances éstivales
+                iframe(src='https://www.youtube.com/embed/8wl2ddpwEhI', allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture', allowfullscreen='', width='480', height='300', frameborder='0')
+                p 
+                  |  J'espère sincèrement que vous avez davantage respecté le président Vladimir Putin
+                  |  hors caméra.
               //- h1 ICE
               br
               iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2967861029998342%2F&width=1280' width='480' height='320' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
