--- a/public/adm1n.pug
+++ b/public/adm1n.pug
@@ -6,11 +6,15 @@ append content
         #INDEX
           h1.liens LOG IN
             //2965750440209401
-            h1.liens PC SECURITE {Fil de caméra PC = cable de caméra Pauvre Conne (ensemble de filS au sein d'une gaine commune) = Mme Ghiberto de la Police nationale Française}
+            h1.liens PC SECURITE 
+              p
+                | Fil de caméra PC = cable de caméra Pauvre Conne: 
+                | ensemble de filS au sein d'une gaine commune 
+                | @Mme Ghiberto de la Police nationale Française
             #container.col
               iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2971009683016810%2F&width=1280' width='480' height='320' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
               br
-              iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2971189572998821%2F&width=1280' width='480' height='320' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
+              iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2971294869654958%2F&width=1280' width='480' height='320' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
               br
               iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2969777009806744%2F&width=1280' width='480' height='960' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
               h1.liens Proof of hack, apparently from some eastern people
