--- a/public/adm1n.pug
+++ b/public/adm1n.pug
@@ -4,7 +4,7 @@ append content
     .table-cell
       #m0ncentrage  
         #INDEX
-          iframe(src='https://www.facebook.com/mikael.sosmooth/') FACEBOOK LIVE
+          a(href="https://www.facebook.com/mikael.sosmooth/") FACEBOOK LIVE
             //2965750440209401
             h1.liens PC SECURITE 
               p
