--- a/public/layoutNav.pug
+++ b/public/layoutNav.pug
@@ -32,13 +32,15 @@ html(lang="en")
             img(src='/static/img/gitHubMark.png' alt='git' height='35')
             img(src='/static/img/gitHubW.png' alt='git' height='35')
           //#myclock
-          iframe.myclock(src='https://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.mikael.ml&width=480&layout=standard&action=recommend&size=large&share=true&height=35&appId', style='border:none;overflow:h', scrolling='no', allowtransparency='true', allow='encrypted-media', width='480', height='35', frameborder='0')
+          iframe.myclock(src='https://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.mikael.ml&width=480&layout=button_count&action=recommend&size=large&share=true&height=35&appId', style='border:none;overflow:h', scrolling='no', allowtransparency='true', allow='encrypted-media', width='480', height='35', frameborder='0')
           a.minilogR(rel='preconnect' href='https://www.linkedin.com/in/mika%C3%ABl-garcia/')
             img(src='/static/img/LinkedIn_Logo.svg' alt='linkedin' height='35')
     block scripts
       script(src='/static/js/jquery-3.3.1.min.js')
       script(src='/static/js/jquery-ui.min.js')
       script(src='/static/js/socket.io.js' async)
+      #fb-root
+      script(async='', defer='', crossorigin='anonymous', src='https://connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v7.0')
       //script(src='/static/js/layoutNav.js')
       script(src='https://www.googletagmanager.com/gtag/js?id=UA-113167424-1' async)
       // Global site tag (gtag.js) - Google Analytics
