--- a/public/css/scss/styles.scss
+++ b/public/css/scss/styles.scss
@@ -325,7 +325,8 @@ a {
     position: absolute;
     font-size: 1em;
     color: #ffffff;
-    left: 40%;
-    right: 40%;
-    //top: 10px;
+    top: 5px;
+    width: 60%;
+    margin-left: 20%;
+    margin-right: 20%;
 }
