--- a/public/layoutNav.pug
+++ b/public/layoutNav.pug
@@ -32,7 +32,7 @@ html(lang="en")
             img(src='/static/img/gitHubMark.png' alt='git' height='35')
             img(src='/static/img/gitHubW.png' alt='git' height='35')
           //#myclock
-          iframe.myclock(src='https://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.mikael.ml&width=480&layout=button_count&action=recommend&size=large&share=true&height=35&appId', style='border:none;overflow:h', scrolling='no', allowtransparency='true', allow='encrypted-media', width='480', height='35', frameborder='0')
+          iframe.myclock(src='https://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.mikael.ml&layout=button_count&action=recommend&size=large&share=true&appId', style='border:none', scrolling='no', allowtransparency='true', allow='encrypted-media', width='480', height='35', frameborder='0')
           a.minilogR(rel='preconnect' href='https://www.linkedin.com/in/mika%C3%ABl-garcia/')
             img(src='/static/img/LinkedIn_Logo.svg' alt='linkedin' height='35')
     block scripts
