--- a/public/adm1n.pug
+++ b/public/adm1n.pug
@@ -8,7 +8,7 @@ append content
             //2965750440209401
             h1.liens PC SECURITE 
               p
-                | Fil de caméra PC = cable de caméra Pauvre Conne: 
+                | Fil de caméra PC = cable de caméra: 
                 | ensemble de filS au sein d'une gaine commune 
                 | @Mme Ghiberto de la Police nationale Française
             #container.col
