--- a/public/adm1n.pug
+++ b/public/adm1n.pug
@@ -8,8 +8,11 @@ append content
             //2965750440209401
             h1.liens PC SECURITE 
               p
-                | Fil de caméra PC = cable de caméra: 
+                | Fil de caméra PC 
+                iframe(src='https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:6668085994052562944', allowfullscreen='', title='Post intégré', width='504', height='491', frameborder='0')
+                | = cable de caméra:
                 | ensemble de filS au sein d'une gaine commune 
+                br
                 | @Mme Ghiberto de la Police nationale Française
             #container.col
               iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2971009683016810%2F&width=1280' width='480' height='320' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
