--- a/public/adm1n.pug
+++ b/public/adm1n.pug
@@ -26,7 +26,7 @@ append content
               br
               iframe(src='https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fposts%2F2966141376836974&width=500' width='480' height='370' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allow='encrypted-media')
               //@Emmanuel et Brigitte MACRON
-              h1.liens Visite du Présedent de la Russie aux Macrons lors de leurs vacances estivales
+              h1.liens Visite du Président de la Russie aux Macrons lors de leurs vacances estivales
                 iframe(src='https://www.youtube.com/embed/8wl2ddpwEhI', allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture', allowfullscreen='', width='480', height='300', frameborder='0')
                 p 
                   |  J'espère sincèrement que vous avez davantage respecté le président Vladimir Putin
