--- a/public/css/scss/styles.scss
+++ b/public/css/scss/styles.scss
@@ -1,4 +1,4 @@
-@import 'normalize';
+@import "normalize";
 
 $myFont: monospace;
 $colorBody: rgba(19, 42, 121, 0.773);
@@ -90,12 +90,11 @@ h1,
 h2,
 h3,
 h4,
-nav,
-p   {
+nav {
     color: white;
     text-align: center;
     font-family: $myFont;
-    }
+}
 
 nav {
     ul {
@@ -103,9 +102,11 @@ nav {
         padding: 0;
         list-style: none;
     }
-    
-    li { display: inline-block; }
-    
+
+    li {
+        display: inline-block;
+    }
+
     a {
         text-decoration: none;
     }
@@ -128,7 +129,7 @@ nav {
     background-color: rgba(255, 255, 255, 0.3);
     border-radius: 10px;
     text-align: center;
-  }
+}
 
 a {
     margin: 10px;
@@ -178,23 +179,23 @@ a {
     font-family: $myFont;
     background-image: linear-gradient(to bottom, rgba(139, 47, 47, 0.9), rgba(129, 44, 44, 0.5));
 }
-    
+
 .css3buttonRed:hover {
     background-image: linear-gradient(to bottom, rgba(253, 60, 60, 0.8), rgba(253, 60, 60, 0.3));
     text-decoration: none;
 }
 
 .content {
-  display: table;
-  height: 100%;
-  width: 94%;
-  margin-left: 3%;
- }
+    display: table;
+    height: 100%;
+    width: 94%;
+    margin-left: 3%;
+}
 
 .table-cell {
-  display: table-cell;
-  vertical-align: middle;
-  text-align: center;
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
 }
 
 #m0ncentrage {
@@ -242,18 +243,16 @@ a {
     margin-right: 7px;
     margin-bottom: 10px;
     margin-top: 5px;
-
 }
 
 #jugglejungle,
 #s0leil {
-@extend %videoSoleil;
+    @extend %videoSoleil;
 }
 
 #ci3l,
 #m0nC4nvaM3r,
 #m0nC4nvaC0lline {
-
 }
 
 #BtnJs0nPl4Y {
