--- a/public/giftedADHD.pug
+++ b/public/giftedADHD.pug
@@ -11,25 +11,28 @@ append content
 						img#english(src='/static/img/uk.svg' alt='English' height='30')
 						img#french(src='/static/img/france.svg' alt='Français' height='30')
 					h3.auteurs
-						span.english written by: Lynn-nore Chittom
-						span.french écrit par: Lynn-nore Chittom
+						span.english written by:
+						span.french écrit par:
+						|  Lynn-nore Chittom
 						br
-						span.english edited by: Daniel P. McGoldrick
-						span.french édité par: Daniel P. McGoldrick
+						span.english edited by:
+						span.french édité par:
+						|  Daniel P. McGoldrick
 						br
-						span.english PhD Genome Sciences
-						span.french Professeur en Sciences Génétiques
+						.english PhD Genome Sciences
+						.french  Professeur en Sciences Génétiques
+						| University of Washington Seattle
 						br
-						span.english University of Washington Seattle
-						span.french University de Washington Seattle
+						.english Department of Genome Sciences
+						.french Departement de Sciences Génétiques
+						span.english updated:
+						span.french mis à jour:
+						|  25/05/2011
 						br
-						span.english Department of Genome Sciences
-						span.french Departement de Sciences Génétiques
-						br
-						span.english updated: 5/25/2011
-						span.french mis à jour: 25/05/2011
-						br
-						span.french traduit par: Mikaël Garcia le 19 mars 2020
+						span.english translated by:
+						span.french traduit par:
+						|  Mikaël Garcia
+						| 19/03/2020
 					p
 						span.english
 							| Parents sometimes wonder if their children can have both ADHD and High IQ levels.
@@ -37,13 +40,11 @@ append content
 						span.french
 							| Des parents se demandent parfois si leurs enfants peuvent être à la fois Haut Potentiel (HP) et hyperactif (TDAH).
 							| La réponse est oui et c'est souvent le cas. 
-					p
 						span.english
 							| Read on for answers to common questions about the relationship between ADHD and intelligence.
 						span.french
 							| Poursuivez la lecture pour des réponses aux principales questions sur les liens entre
 							| TDAH et intelligence.
-					p
 						span.english 
 							| Masked, But Still There Some children with ADHD have also been gifted with a high IQ.
 							| Unfortunately, this does not actually negate the symptoms of the ADHD, though it may mask them for a while
@@ -52,7 +53,6 @@ append content
 							| Invisible mais bien présent, il existe des enfants qui ont un TDAH et un QI élevé.
 							| Malheureusement, cette intelligence ne compense pas le trouble du déficit de l'attention avec hyperactivité 
 							| bien qu'elle le camoufle un certain temps, ce qui complique ce diagnostique. 
-					p
 						span.english
 							| Typically gifted children demonstrate a complicated combination of symptoms which
 							| represent both their giftedness and their ADHD. This may include perceptions or reasoning skills beyond
@@ -64,7 +64,6 @@ append content
 							| Celle-ci peut inclure des capacités de perception ou de raisonnement au-delà de leur âge, avec une
 							| tendance naturelle vers l'hyperactivité. Ou alors, elle se remarque par l'apprentissage précoce de la 
 							| lecture, de surprenantes facilités d'apprentissages, combinées à de très pauvres capacités sociales.
-					p
 						span.english
 							| Regardless of their intelligence, for children to be diagnosed with ADHD they must
 							| present symptoms from the following list for at least six months and symptoms must appear prior to age
@@ -124,35 +123,30 @@ append content
 						span.french
 							| Les enfants au QI élevé sont souvent capables de duper la détection de leur TDAH
 							| s'ils ne sont pas détectés précocement.
-					p
 						span.english
 							| By school time they are very capable of figuring out assignments even if they did not
 							| hear the directions.
 						span.french
 							| En milieu scolaire ils sont souvent capables de suivre les consignes même s'ils 
 							| n'entendent pas les instructions.
-					p
 						span.english
 							| Similarly they may be able to learn independently and catch up despite
 							| distractability, excessive talking or fidgeting in the classroom.
 						span.french
 							| Ils sont également capables d'apprendre seul et d'acquérir les notions malgré 
 							| la distraction, les bavardages ou l'agitation en classe.
-					p
 						span.english
 							| Unfortunately, the ADHD eventually catches up with them as classwork becomes more
 							| challenging and teachers depend more on students being organized, self-motivated and attentive.
 						span.french
 							| Malheureusement, le TDAH les rattrape parfois quand les devoirs deviennent plus compliqués
 							| et que les professeurs demandent davantage aux étudiants en termes d'organisation et de concentration.
-					p
 						span.english
 							| At this point the ADHD may appear to come out of nowhere for children who have masked
 							| it under their high intelligence.
 						span.french
 							| Au point que le TDAH risque d'apparaître comme sorti de nulle part pour les enfants qui l'ont
 							| masqué sous leur grande intelligence.
-					p
 						span.english
 							| Symptoms that May Appear Later in Life Individuals with ADHD and high intelligence
 							| sometimes manage to maneuver their way through school riding on their intellect alone. They work their
@@ -163,7 +157,6 @@ append content
 							| TDAH et une forte intelligence qui parfois gèrent pour manœuvrer leur chemin à travers l'école en
 							| surfant seulement sur leur capacité à comprendre. Ils manipulent leurs professeurs, le système 
 							| et réussissent sans embûches en s'impliquant suffisamment, malgré leurs limites.
-					p
 						span.english
 							| During school years, the ADHD may go undetected and symptoms may be attributed to
 							| boredom or defiance. Outside of school it becomes obvious that these individuals have difficulties with
@@ -177,26 +170,22 @@ append content
 							| avec les tâches à l'extrême, d'avoir des problèmes de sommeil à cause de l'hyperactivité ou bien de lutter pour 
 							| rester organisé/concentré sur une tâche. Ces symptômes peuvent survenir à n'importe quel moment,
 							| mais cela ne veut pas dire qu'il s'agisse de nouveaux symptômes.
-					p
 						span.english
 							| ADHD is a genetic neuropsychological disorder, and is not an adult-onset
 							| disorder.
 						span.french
 							| Un TDAH est un trouble neuropsychologique génétique, et non un trouble qui survient chez l'adulte.
-					p
 						span.english
 							| When symptoms seem to appear later in life, individuals may initially deny their
 							| ADHD, but often eventually decide to pursue treatment on their own.
 						span.french
 							| Lorsque les symptômes semblent intervenir plus tard dans leur vie, ils risquent dans un premier
 							| temps de nier leur TDAH, mais souvent décident éventuellement de poursuivre un traitement d'eux-mêmes.
-					p
 						span.english
 							| Medication can be effective, even if they did not treat their ADHD in this way during
 							| childhood or adolescence.
 						span.french
 							| Des médicaments peuvent fonctionner, même s'ils n'en n'ont pas pris durant l'enfance ou l'adolescence.
-					p
 						span.english
 							| The most popular treatment options for adults with ADHD and High IQ are stimulant
 							| drugs which reduce their symptoms and enable their high intelligence to shine.
@@ -207,7 +196,7 @@ append content
 						span
 							| References:
 						a(rel='preconnect' href='http://psychcentral.com/news/2009/05/25/high-iq-offers-no-protection-from-adhd-effects/6074.html') http://psychcentral.com/news/2009/05/25/high-iq-offers-no-protection-from-adhd-effects/6074.html
-					p
+						br
 						a(rel='preconnect' href='http://www.webmd.com/add-adhd/guide/adhd-symptoms') http://www.webmd.com/add-adhd/guide/adhd-symptoms 
 append scripts
 	script(src='/static/js/trad.js' defer)
