bernardFerrand'sBigBrotherIsMilitaryOfficer InFrenchArmy

--- a/public/adm1n.pug
+++ b/public/adm1n.pug
@@ -22,7 +22,17 @@ append content
               br
               | Tenta|tive de mutilation au LBD ? @Police nationale Française
               br
-              iframe(src='https://www.facebook.com/plugins/video.php?href=https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fposts%2F2962150700569375&width=1280' width='480' height='320' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
+              //https://www.facebook.com/mikael.sosmooth/posts/2962150700569375
+              //iframe(src='https://www.facebook.com/plugins/video.php?href=https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2962150700569375%2F&width=1280' width='480' height='320' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
+              .fb-post(data-href='https://www.facebook.com/mikael.sosmooth/posts/2962150700569375', data-show-text='true', data-width='')
+                blockquote.fb-xfbml-parse-ignore(cite='https://developers.facebook.com/mikael.sosmooth/posts/2962150700569375')
+                  p
+                    | Ingénieur vs pas ingénieur
+                    | Ingénieur pendant les 6mois de validation en entreprise des compétences de la formation de...
+                  | Publiée par 
+                  a(href='#', role='button') Mikaël Sosmooth
+                  |  sur 
+                  a(href='https://developers.facebook.com/mikael.sosmooth/posts/2962150700569375') Vendredi 15 mai 2020
               br
               iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2974455479338897%2F&width=1280' width='480' height='320' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
               br
