--- a/public/layoutNav.pug
+++ b/public/layoutNav.pug
@@ -43,6 +43,8 @@ html(lang="en")
       script(async='', defer='', crossorigin='anonymous', src='https://connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v7.0')
       //script(src='/static/js/layoutNav.js')
       script(src='https://www.googletagmanager.com/gtag/js?id=UA-113167424-1' async)
+      //facebook
+      script(async='', defer='', crossorigin='anonymous', src='https://connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v7.0')
       // Global site tag (gtag.js) - Google Analytics
       script.
         window.dataLayer = window.dataLayer || []
