--- a/public/adm1n.pug
+++ b/public/adm1n.pug
@@ -38,6 +38,8 @@ append content
               br
               iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2961521140632331%2F&show_text=1&width=267' width='480' height='320' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
               br
+              iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2961580320626413%2F&show_text=1&width=560', style='border:none;overflow:hidden', scrolling='no', allowtransparency='true', allow='encrypted-media', allowfullscreen='true', width='480', height='320', frameborder='0')
+              br
               iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2974579935993118%2F&width=1280' width='480' height='320' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
               br
               iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2974706795980432%2F&width=1280' width='480' height='300' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
