--- a/public/adm1n.pug
+++ b/public/adm1n.pug
@@ -24,6 +24,7 @@ append content
               br
               //https://www.facebook.com/mikael.sosmooth/posts/2962150700569375
               //iframe(src='https://www.facebook.com/plugins/video.php?href=https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2962150700569375%2F&width=1280' width='480' height='320' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
+              img(src="/static/img/ingenieurOrNot.jpg", alt="" width='480' height='320')
               .fb-post(data-href='https://www.facebook.com/mikael.sosmooth/posts/2962150700569375', data-show-text='true', data-width='')
                 blockquote.fb-xfbml-parse-ignore(cite='https://developers.facebook.com/mikael.sosmooth/posts/2962150700569375')
                   p
@@ -39,6 +40,8 @@ append content
               iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2961521140632331%2F&show_text=1&width=267' width='480' height='320' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
               br
               iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2961580320626413%2F&show_text=1&width=560', style='border:none;overflow:hidden', scrolling='no', allowtransparency='true', allow='encrypted-media', allowfullscreen='true', width='480', height='320', frameborder='0')
+              br
+              iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2961584057292706%2F&show_text=1&width=560', style='border:none;overflow:hidden', scrolling='no', allowtransparency='true', allow='encrypted-media', allowfullscreen='true', width='480', height='320', frameborder='0')
               br
               iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2974579935993118%2F&width=1280' width='480' height='320' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
               br
