--- a/public/adm1n.pug
+++ b/public/adm1n.pug
@@ -24,7 +24,7 @@ append content
               br
               //https://www.facebook.com/mikael.sosmooth/posts/2962150700569375
               //iframe(src='https://www.facebook.com/plugins/video.php?href=https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2962150700569375%2F&width=1280' width='480' height='320' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
-              img(src="/static/img/ingenieurOrNot.jpg", alt="" width='480' height='320')
+              //img(src="/static/img/ingenieurOrNot.jpg", alt="" width='480' height='320')
               .fb-post(data-href='https://www.facebook.com/mikael.sosmooth/posts/2962150700569375', data-show-text='true', data-width='')
                 blockquote.fb-xfbml-parse-ignore(cite='https://developers.facebook.com/mikael.sosmooth/posts/2962150700569375')
                   p
@@ -34,6 +34,8 @@ append content
                   a(href='#', role='button') Mikaël Sosmooth
                   |  sur 
                   a(href='https://developers.facebook.com/mikael.sosmooth/posts/2962150700569375') Vendredi 15 mai 2020
+              br
+              iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2922773807840398%2F&width=1280' width='480' height='960' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
               br
               iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2974455479338897%2F&width=1280' width='480' height='320' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
               br
@@ -46,6 +48,8 @@ append content
               iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2974579935993118%2F&width=1280' width='480' height='320' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
               br
               iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2974706795980432%2F&width=1280' width='480' height='300' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
+              br
+              iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2945098235607955%2F&show_text=1&width=267', style='border:none;overflow:hidden', scrolling='no', allowtransparency='true', allow='encrypted-media', allowfullscreen='true', width='267', height='709', frameborder='0')
               h1.liens Proof of hack, apparently from some eastern people
               br
               iframe(src='https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fposts%2F2966141376836974&width=500' width='480' height='370' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allow='encrypted-media')
