--- a/public/adm1n.pug
+++ b/public/adm1n.pug
@@ -18,9 +18,9 @@ append content
               br
               | @Mme Ghiberto de la Police nationale Française
               br
-              iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2961527407298371%2F&show_text=1&width=560' width='480' height='320' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
+              iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2961527407298371%2F&show_text=1&width=560' width='480' height='330' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
               br
-              | Tenta|tive de mutilation au LBD ? @Police nationale Française
+              | Tentative de mutilation au LBD ? @Police nationale Française
               br
               //https://www.facebook.com/mikael.sosmooth/posts/2962150700569375
               //iframe(src='https://www.facebook.com/plugins/video.php?href=https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2962150700569375%2F&width=1280' width='480' height='320' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
