--- a/public/adm1n.pug
+++ b/public/adm1n.pug
@@ -116,6 +116,9 @@ append content
               iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2922773807840398%2F&width=1280' width='480' height='960' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
               br
               iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2961483090636136%2F&width=1280' width='480' height='960' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
+              br
+              h3 Confession de vol de la cam 1080p 360° de xiaomi avec le son recouvert par autre chose, pas par moi....
+              iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2945197372264708%2F&width=1280' width='480' height='960' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
             //- p.hack visualstudio2017buildtools has been installed.
             //- p.hack visualstudio2017buildtools may be able to be automatically uninstalled.
             //- p.hack The upgrade of visualstudio2017buildtools was successful.
