on m'a craché 2fois dessus réellement aujourd'hui  c'était Jean-Michel du 2eme

--- a/public/adm1n.pug
+++ b/public/adm1n.pug
@@ -126,6 +126,15 @@ append content
               br
               h3 Very proof ONE
               iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2941427049308407%2F&width=1280' width='480' height='960' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
+              br
+              iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2936487599802352%2F&width=1280' width='480' height='960' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
+              br
+              iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2936144413170004%2F&width=1280' width='480' height='960' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
+              br
+              iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2917901691660943%2F&width=1280' width='480' height='960' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
+              br
+              h3 on m'a craché 2fois dessus réellement aujourd'hui, c'était Jean-Michel du 2ème
+              iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2914106548707124%2F&width=1280' width='480' height='960' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
             //- p.hack visualstudio2017buildtools has been installed.
             //- p.hack visualstudio2017buildtools may be able to be automatically uninstalled.
             //- p.hack The upgrade of visualstudio2017buildtools was successful.
