'Chucky la poupée qui tue' et sa compagne; en attente de comparution immédiate à domicile ?

--- a/public/adm1n.pug
+++ b/public/adm1n.pug
@@ -18,9 +18,9 @@ append content
               br
               | @Mme Ghiberto de la Police nationale Française
               br
-              iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2961527407298371%2F&show_text=1&width=560' width='480' height='340' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
-              br
-              | Tentative de mutilation au LBD ? @Police nationale Française
+              //iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2961527407298371%2F&show_text=1&width=560' width='480' height='340' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
+              //br
+              | Tentative de mutilation au LBD ? @Police nationale Française (video fb live via ordinateur avant achat xiaomi à retrouver)
               br
               //https://www.facebook.com/mikael.sosmooth/posts/2962150700569375
               //iframe(src='https://www.facebook.com/plugins/video.php?href=https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2962150700569375%2F&width=1280' width='480' height='340' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
@@ -36,6 +36,10 @@ append content
                   a(href='https://developers.facebook.com/mikael.sosmooth/posts/2962150700569375') Vendredi 15 mai 2020
               br
               h1 Flux FACEBOOK LIVE security cams + showScreen helloWorld
+              br
+              iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2980242862093492%2F&show_text=0&width=560' width="480" height="202.5" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true")
+              br
+              iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2981340468650398%2F&width=1280' width='480' height='340' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
               br
               iframe(src='https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fvideos%2F2979073332210445%2F&width=1280' width='480' height='202.5' style='border:none;overflow:hidden' scrolling='no' frameborder='0' allowtransparency='true' allowfullscreen='true')
               br
