--- a/public/adm1n.pug
+++ b/public/adm1n.pug
@@ -11,8 +11,8 @@ append content
             p
               | Fil de caméra PC
               br 
-              | phtographie prise en réanimation, après avoir réussi  m'échapper par ma fenêtre avec ma trotinnette,
-              | alors que la police essayait d'entrer par la force dans mon logement.
+              | Photographie prise en réanimation, après avoir réussi à  m'échapper par ma fenêtre avec ma trotinnette electrique,
+              | xiaomi elle aussi, alors que la police essayait d'entrer par la force dans mon logement.
               | Je me souviens que le voisin du premier leur a indiqué ma fuite par la fenêtre.
               | Apparement j'aurai été retrouvé un arrêt cardio-respiratoire (15min)  l'arrivée des soignants.
               br 
