--- a/public/adm1n.pug
+++ b/public/adm1n.pug
@@ -14,7 +14,7 @@ append content
               | Photographie prise en réanimation, après avoir réussi à  m'échapper par ma fenêtre avec ma trotinnette electrique,
               | xiaomi elle aussi, alors que la police essayait d'entrer par la force dans mon logement.
               | Je me souviens que le voisin du premier leur a indiqué ma fuite par la fenêtre.
-              | Apparement j'aurai été retrouvé un arrêt cardio-respiratoire (15min)  l'arrivée des soignants.
+              | Apparement j'aurai été retrouvé en arrêt cardio-respiratoire (15min) à l'arrivée des soignants.
               br 
               iframe(src='https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fmikael.sosmooth%2Fposts%2F2971859896265122&width=500' style='border:none;overflow:hidden' scrolling='no' allowtransparency='true' allow='encrypted-media' width='280' height='480' frameborder='0')
               br
