--- a/public/jeuCV.pug
+++ b/public/jeuCV.pug
@@ -39,7 +39,7 @@ append content
       .informatiquesCont.french.english.spanish#informatique
         h3.titreH3 Front-End Development
         .informatiques#informatique
-          .infoJeu JavaScript
+          .infoJeu ECMAScript 6 (JavaScript)
           .infoJeu jade/PUG
           .infoJeu HTML5
           .infoJeu JQUERY
