youtube /mod jungleJuggling

--- a/public/index.pug
+++ b/public/index.pug
@@ -9,8 +9,9 @@ append content
             #s0leil
             include jeuCV.pug
             .paraFoot My name is Mikael, I'm an IBM RPG &amp; Javascript Developer.
-              video#jugglejungle(playsinline autoplay muted loop poster='/static/img/kuansiFalls.webp')
-                source(src='/static/video/theOneFinal.webm'  type='video/webm')
+              iframe(width='480', height='295', src='https://www.youtube.com/embed/zrqUP4NcIgQ', frameborder='0', allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture', allowfullscreen='')
+              //video#jugglejungle(playsinline autoplay muted loop poster='/static/img/kuansiFalls.webp')
+                //source(src='/static/video/theOneFinal.webm'  type='video/webm')
             button#BtnJs0nPl4Y PLAY
             .paraFoot This website hosts my skills, projects and experiences.
           //include joust.pug
