--- a/public/index.pug
+++ b/public/index.pug
@@ -9,10 +9,10 @@ append content
             #s0leil
             include jeuCV.pug
             .paraFoot My name is Mikael, I'm an IBM RPG &amp; Javascript Developer.
-              iframe(width='480', height='295', src='https://www.youtube.com/embed/zrqUP4NcIgQ', frameborder='0', allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture', allowfullscreen='')
+              iframe(width='480', height='270', src='https://www.youtube.com/embed/zrqUP4NcIgQ', frameborder='0', allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture', allowfullscreen='')
               //video#jugglejungle(playsinline autoplay muted loop poster='/static/img/kuansiFalls.webp')
                 //source(src='/static/video/theOneFinal.webm'  type='video/webm')
-            button#BtnJs0nPl4Y PLAY
+            //button#BtnJs0nPl4Y PLAY
             .paraFoot This website hosts my skills, projects and experiences.
           //include joust.pug
           //include adm1n.pug
