--- a/public/css/scss/styles.scss
+++ b/public/css/scss/styles.scss
@@ -5,10 +5,12 @@ $colorBody: rgba(19, 42, 121, 0.773);
 %videoSoleil {
     display: none;
     border: 0.7px solid black;
-    width: 98%;
+    width: 480px;
     border-radius: 10px;
-    margin: 1%;
+    margin-left: auto;
+    margin-right: auto;
 }
+
 %css3Button {
     //border: 0.7px solid white;
     width: 70px;
@@ -245,7 +247,7 @@ a {
     margin-top: 5px;
 }
 
-#jugglejungle,
+//#jugglejungle,
 #s0leil {
     @extend %videoSoleil;
 }
@@ -262,7 +264,7 @@ a {
     width: 16%;
     left: 42%;
     right: 42%;
-    margin-top: -70px;
+    margin-top: 230px;
     font-family: $myFont;
     border-radius: 28px;
     font-size: 1em;
