--- a/public/index.pug
+++ b/public/index.pug
@@ -6,13 +6,14 @@ append content
         .m0ncentrageParafoot
           #INDEX
             h1 Welcome to my devlab
-            iframe(width='480', height='270', src='https://www.youtube.com/embed/zrqUP4NcIgQ', frameborder='0', allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture', allowfullscreen='')
-            .paraFoot My name is Mikael, I'm an IBM RPG &amp; Javascript Developer.
+            video#jugglejungle(width='480', height='270', playsinline autoplay muted loop poster='/static/img/kuansiFalls.webp')
+              source( src='/static/video/theOneFinal.webm'  type='video/webm')
+            button#BtnJs0nPl4Y PLAY
+            //iframe(width='480', height='270', src='/static/video/theOneFinal.webm?autoplay=1&loop=1&autopause=1&autopause=0&muted=1&background=1', frameborder='0', allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture', allowfullscreen='')
+            .paraFoot My name is Mikael
             #s0leil
+            .paraFoot I'm an IBM RPG &amp; Javascript Developer
             include jeuCV.pug
-              //video#jugglejungle(playsinline autoplay muted loop poster='/static/img/kuansiFalls.webp')
-                //source(src='/static/video/theOneFinal.webm'  type='video/webm')
-            //button#BtnJs0nPl4Y PLAY
             .paraFoot This website hosts my skills, projects and experiences.
           //include joust.pug
           //include adm1n.pug
