--- a/public/layoutNav.pug
+++ b/public/layoutNav.pug
@@ -31,8 +31,8 @@ html(lang="en")
           a.minilogL(rel='preconnect' href='https://github.com/m1k431')
             img(src='/static/img/gitHubMark.png' alt='git' height='35')
             img(src='/static/img/gitHubW.png' alt='git' height='35')
-          iframe.myclock(src='https://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.mikael.ml&layout=button_count&action=recommend&size=large&share=true&appId',
-           style='border:none', scrolling='no', allowtransparency='true', allow='encrypted-media', width='480', height='35', frameborder='0')
+          iframe.myclock(src='https://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.mikael.ml',
+           style='border:none, margin-right:auto, margin-left:auto', scrolling='no', allowtransparency='true', allow='encrypted-media', width='480', height='35', frameborder='0')
           a.minilogR(rel='preconnect' href='https://www.linkedin.com/in/mika%C3%ABl-garcia/')
             img(src='/static/img/LinkedIn_Logo.svg' alt='linkedin' height='35')
     block scripts
