--- a/public/css/scss/styles.scss
+++ b/public/css/scss/styles.scss
@@ -53,9 +53,10 @@ iframe {
     //border: 1px solid white;
     //background-color: rgba(183, 210, 214, 0.1);
     //border-radius: 10px;
+    width: 480px;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 2.5%;
+    margin-bottom: 0.5%;
     margin-top: 0.5%;
     text-align: center;
 }
