i prefer dark theme for twitter

--- a/public/index.pug
+++ b/public/index.pug
@@ -15,7 +15,7 @@ append content
             .paraFoot I'm an IBM RPG &amp; Javascript Developer
             include jeuCV.pug
             .paraFoot This website hosts my skills, projects and experiences.
-            a.twitter-timeline(data-width='480', data-height='640', data-theme='light', href='https://twitter.com/K431M1?ref_src=K431M1') Tweets by K431M1
+            a.twitter-timeline(data-width='480', data-height='640', data-theme='dark', href='https://twitter.com/K431M1?ref_src=K431M1') Tweets by K431M1
           //include joust.pug
           //include adm1n.pug
 append scripts
