defer async+defer = 69

--- a/public/index.pug
+++ b/public/index.pug
@@ -19,7 +19,7 @@ append content
           //include joust.pug
           //include adm1n.pug
 append scripts
-  script(src='https://platform.twitter.com/widgets.js' async defer)
+  script(src='https://platform.twitter.com/widgets.js' defer)
   script(src='/static/js/soleil.js' async)
   script(src='/static/js/BrickBreaker.js' async)
   script.
