--- a/public/index.pug
+++ b/public/index.pug
@@ -15,7 +15,8 @@ append content
             .paraFoot I'm an IBM RPG &amp; Javascript Developer
             include jeuCV.pug
             .paraFoot This website hosts my skills, projects and experiences.
-            a.twitter-timeline(data-width='480', data-height='640', data-chrome="transparent nofooter noborders noheader noscrollbar", data-theme='', href='https://twitter.com/K431M1?ref_src=K431M1') Tweets by K431M1
+            a.twitter-timeline(data-width='480', data-height='640', data-chrome="transparent noscrollbar", data-theme='', href='https://twitter.com/K431M1?ref_src=K431M1') Tweets by M1K431
+          //noborders noheader nofooter
           //include joust.pug
           //include adm1n.pug
 append scripts
